# d4d-seasentinel

./: .dockerignore  .env.example  .gitignore  Dockerfile.dashboard  README.md  compose.yml  pyproject.toml
config/: aois.yaml  coast.json  events.yaml  foundry.yaml  gray_zones.yaml  incidents.yaml  index.yaml  regions.yaml  scoring.yaml  sources.yaml  stealthmole_keywords.yaml  terms_ko.yaml
dashboard/: app.js  index.html  package.json  server.py  styles.css  vercel.json
dashboard/api/: copilot.js  generate.js  models.js
docs/: ARCHITECTURE.md  OVERVIEW.md
scripts/: demo.sh  fetch_coastline.py
simulation/: README.md  generate_data.py
src/mda/: cli.py  config.py  llm_client.py  paths.py
src/mda/api/: app.py  assess.py  datasets.py  llm.py  queries.py  sitrep.py
src/mda/collectors/: aisstream_realtime.py  gdelt.py  gfw.py  gfw_events.py  reference.py  stealthmole.py  weather_openmeteo.py
src/mda/ontology/: schema.sql
src/mda/pipelines/: artifact.py  backtest.py  charts.py  exporter.py  index.py  persist.py  scoring.py  signals.py  tracks.py  (+1 more)
src/presail/: artifact.py  backtest.py  charts.py  cli.py  config.py  gdelt.py  gfw.py  index.py  paths.py  signals.py
tests/: test_aisstream.py  test_api.py  test_assess.py  test_cache.py  test_collectors.py  test_exporter.py  test_foundry.py  test_gfw_events.py  test_index.py  test_retention.py  test_scoring.py  test_scoring_v2.py  test_signals.py  test_sim.py  test_sitrep.py  test_store.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.module.css  App.tsx  main.tsx
(+69 files in other folders)
