[project]
name = "presail"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "httpx",
    "pandas",
    "numpy",
    "matplotlib",
    "pyyaml",
    "python-dotenv",
    "pyarrow",
    "psycopg[binary]",
    "websockets",
    "pyjwt",
]

[dependency-groups]
dev = [
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/presail", "src/mda"]
